modified:   educational_practice_2/CSS/account.css 	modified:   educational_practice_2/CSS/account.css.map 	modified:   educational_practice_2/CSS/account.scss 	modified:   educational_practice_2/CSS/index.css 	modified:   educational_practice_2/CSS/index.css.map 	modified:   educational_practice_2/CSS/index.scss 	modified:   educational_practice_2/CSS/mixin.scss 	new file:   educational_practice_2/CSS/order.css 	new file:   educational_practice_2/CSS/order.css.map 	new file:   educational_practice_2/CSS/order.scss 	modified:   educational_practice_2/CSS/style.css 	modified:   educational_practice_2/CSS/style.css.map 	modified:   educational_practice_2/CSS/style.scss 	modified:   educational_practice_2/HTML/order.html

--- a/educational_practice_2/CSS/account.scss
+++ b/educational_practice_2/CSS/account.scss
@@ -1,14 +1,10 @@
+@import "./mixin.scss";
+
 main{
     width: 95%;
-    a{
+    @include create-button;
+    a, button{
         width: 20%;
-        height: 5vh;
-        background-color: green;
-        margin: 1vh 0;
-        border-radius: 7.5px;
-        &:hover{
-            background-color: red;
-        }
     }
 }
 #past_orders{
