--- a/educational_practice_2/CSS/index.css
+++ b/educational_practice_2/CSS/index.css
@@ -1,3 +1,11 @@
+#company_info {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  width: 100%;
+}
+
 #main_company_info {
   display: flex;
   flex-direction: column;
