--- a/educational_practice_2/CSS/account.css
+++ b/educational_practice_2/CSS/account.css
@@ -1,15 +1,19 @@
 main {
   width: 95%;
 }
-main a {
-  width: 20%;
+main a, main button {
+  width: 40%;
   height: 5vh;
   background-color: green;
   margin: 1vh 0;
   border-radius: 7.5px;
+  border: none;
 }
-main a:hover {
+main a:hover, main button:hover {
   background-color: red;
+}
+main a, main button {
+  width: 20%;
 }
 
 #past_orders {
