--- a/educational_practice_2/CSS/index.scss
+++ b/educational_practice_2/CSS/index.scss
@@ -1,3 +1,10 @@
+@import "./mixin.scss";
+
+#company_info{
+    @include flex-center;
+    flex-direction: column;
+    width: 100%;
+}
 #main_company_info{
     display: flex;
     flex-direction: column;
