--- a/educational_practice_2/CSS/style.css
+++ b/educational_practice_2/CSS/style.css
@@ -1,3 +1,17 @@
+* {
+  margin: 0;
+  padding: 0;
+}
+
+h1 {
+  padding: 2.5%;
+}
+
+p {
+  padding: 2.5%;
+  width: 80%;
+}
+
 a {
   display: flex;
   justify-content: center;
@@ -42,7 +56,7 @@ main {
   align-items: center;
   flex-direction: column;
   width: 80%;
-  margin-bottom: 5%;
+  margin: 2.5% 0 5% 0;
 }
 
 footer {
