--- a/educational_practice_2/CSS/style.scss
+++ b/educational_practice_2/CSS/style.scss
@@ -1,9 +1,17 @@
 @import "./mixin.scss";
 
-// *{
-    // margin: 0;
-    // padding: 0;
-// }
+*{
+    margin: 0;
+    padding: 0;
+}
+
+h1{
+    padding: 2.5%;
+}
+p{
+    padding: 2.5%;
+    width: 80%
+}
 
 a{
     @include flex_center;
@@ -44,7 +52,7 @@ main{
     @include flex_center;
     flex-direction: column;
     width: 80%;
-    margin-bottom: 5%;
+    margin: 2.5% 0 5% 0;
 }
 
 footer{
