modified:   educational_practice_2/CSS/account.css 	modified:   educational_practice_2/CSS/account.css.map 	modified:   educational_practice_2/CSS/account.scss 	modified:   educational_practice_2/CSS/index.css 	modified:   educational_practice_2/CSS/index.css.map 	modified:   educational_practice_2/CSS/index.scss 	modified:   educational_practice_2/CSS/mixin.scss 	modified:   educational_practice_2/CSS/order.css 	modified:   educational_practice_2/CSS/order.css.map 	modified:   educational_practice_2/CSS/order.scss 	modified:   educational_practice_2/CSS/profile.css.map 	modified:   educational_practice_2/CSS/style.css 	modified:   educational_practice_2/CSS/style.css.map 	modified:   educational_practice_2/CSS/style.scss 	modified:   educational_practice_2/HTML/account.html 	new file:   educational_practice_2/assets/background_main.png

--- a/educational_practice_2/CSS/account.scss
+++ b/educational_practice_2/CSS/account.scss
@@ -15,6 +15,7 @@ table{
     text-align: center;
     border: 2px solid grey;
     border-radius: 10px;
+    background-color: $background-color-1;
     margin: 2vh 0;
     th{
         padding: 1vh 0;
