--- a/educational_practice_2/CSS/account.css
+++ b/educational_practice_2/CSS/account.css
@@ -4,13 +4,14 @@ main {
 main a, main button {
   width: 40%;
   height: 5vh;
-  background-color: green;
+  background-color: rgb(30, 30, 30);
   margin: 1vh 0;
   border-radius: 7.5px;
   border: none;
+  color: white;
 }
 main a:hover, main button:hover {
-  background-color: red;
+  background-color: rgb(220, 0, 0);
 }
 main a, main button {
   width: 20%;
@@ -25,6 +26,7 @@ table {
   text-align: center;
   border: 2px solid grey;
   border-radius: 10px;
+  background-color: rgb(68, 68, 68);
   margin: 2vh 0;
 }
 table th {
