--- a/educational_practice_2/CSS/index.css
+++ b/educational_practice_2/CSS/index.css
@@ -4,6 +4,9 @@
   align-items: center;
   flex-direction: column;
   width: 100%;
+  background-color: rgb(68, 68, 68);
+  border-radius: 10px;
+  margin-bottom: 2.5vh;
 }
 
 #main_company_info {
