--- a/educational_practice_2/CSS/style.scss
+++ b/educational_practice_2/CSS/style.scss
@@ -15,16 +15,22 @@ p{
 
 a{
     @include flex_center;
-    color: black;
+    color: white;
     text-decoration: none;
+    background-color: $background-color-2;
     &:hover{
-        background-color: green;
+        background-color: $accent-color;
     }
 }
 
 body{
     @include flex_center;
     flex-direction: column;
+    background-image: url(../assets/background_main.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: 50% 50%;
+    color: white;
 }
 
 header{
@@ -43,7 +49,7 @@ nav{
     // display: flex;
     width: 20%;
     height: 100%;
-    background-color: red;
+    // background-color: red;
     // justify-content: center;
     // align-items: center;
 }
@@ -53,6 +59,9 @@ main{
     flex-direction: column;
     width: 80%;
     margin: 2.5% 0 5% 0;
+    backdrop-filter: blur(15px);
+    padding: 5% 2.5%;
+    border-radius: 60px;
 }
 
 footer{
@@ -62,6 +71,7 @@ footer{
     height: 15vh;
     justify-content: space-evenly;
     align-items: center;
+    background-color: $background-color-2;
 }
 .footer_contacts, .footer_useful_links{
     @include flex_center;
