modified:   educational_practice_2/CSS/profile.css 	modified:   educational_practice_2/CSS/profile.css.map 	modified:   educational_practice_2/CSS/profile.scss 	new file:   educational_practice_2/CSS/register.css 	new file:   educational_practice_2/CSS/register.css.map 	new file:   educational_practice_2/CSS/register.scss 	modified:   educational_practice_2/CSS/style.css 	modified:   educational_practice_2/CSS/style.css.map 	modified:   educational_practice_2/CSS/style.scss 	modified:   educational_practice_2/HTML/account.html 	modified:   educational_practice_2/HTML/login.html 	modified:   educational_practice_2/HTML/order.html 	modified:   educational_practice_2/HTML/profile.html 	modified:   educational_practice_2/HTML/register.html 	new file:   educational_practice_2/assets/reg_fon.png 	modified:   educational_practice_2/index.html

--- a/educational_practice_2/CSS/profile.scss
+++ b/educational_practice_2/CSS/profile.scss
@@ -18,7 +18,7 @@ main{
     gap: 1.5vh;
     span{
         @include flex_center;
-        background-color: blue;
+        background-color: $background-color-2;
         width: 60%;
         height: 4vh;
         border-radius: 7.5px;
