--- a/educational_practice_2/CSS/profile.css
+++ b/educational_practice_2/CSS/profile.css
@@ -24,7 +24,7 @@ main {
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: blue;
+  background-color: rgb(30, 30, 30);
   width: 60%;
   height: 4vh;
   border-radius: 7.5px;
