modified:   smart-watch-kei/src/App.css 	modified:   smart-watch-kei/src/App.css.map 	modified:   smart-watch-kei/src/App.js 	modified:   smart-watch-kei/src/App.scss

--- a/smart-watch-kei/src/App.scss
+++ b/smart-watch-kei/src/App.scss
@@ -126,3 +126,11 @@ body{
   width: 15%;
   text-align: center;
 }
+
+#pushMain{
+  width: 80%;
+  background-color: grey;
+  height: 40%;
+  position: absolute;
+
+}
