--- a/smart-watch-kei/src/App.css
+++ b/smart-watch-kei/src/App.css
@@ -135,4 +135,11 @@ body {
   text-wrap: wrap;
   width: 15%;
   text-align: center;
+}
+
+#pushMain {
+  width: 80%;
+  background-color: grey;
+  height: 40%;
+  position: absolute;
 }/*# sourceMappingURL=App.css.map */
